# warp

./: .eslintrc  .gitignore  README-LEGACY.md  README.md  base.json  bundle.js  jest.config.js  mjs-package.sh  new_state_fix.json  package-lock.json  package.json  tsconfig.json  tsconfig.types.json
.github/ISSUE_TEMPLATE/: bug-report-🐞.md  feature-request-💡.md
.github/workflows/: tests.yml
_scripts/: after.json  benchmark.ts  cache-issue.ts  example-usage.ts  single-state-comparator.ts  state-comparator.ts  swc-stats.ts
crates/panic/: Cargo.toml
crates/panic/src/: lib.rs
crates/pst/: .eslintrc.json  jest.config.js  (+2 more)
docs/: BUNDLED_CONTRACT.md  BUNDLED_INTERACTION.md  CONTRACT_METHODS.md  EVOLVE_analysis.md  INTERNAL_WRITES.md  MIGRATION_GUIDE.md  REGISTER_CONTRACT.MD  ROAD_MAP.md  SMARTWEAVE_PROTOCOL.md
src/: index.ts
tools/: FromContractInteractionsLoader.ts  FromFileInteractionsLoader.ts  async-test.js  bar.ts  bundle.ts  cache-benchmark.ts  call-stack.ts  contract-abort.ts  contract-filecache.js  contract-streaming.ts  contract-testnet.js  contract-wasm.ts  contract.ts  deploy-panic.ts  deploytest.ts  fetch-options-plugin.ts  gateway-benchmark.ts  gateways-comparison-benchmark.ts  inner-write-2.ts  inner-write.ts  interactions-from-other-contract.ts  isolate-promise.js  isolate.js  ivm-transaction.js  jwt.ts  leveldb.ts  loot-contract.ts  migrate.ts  quickjs-handle.mjs  quickjs.mjs  remote-cache-test.ts  s3-last.ts  s3-range.ts  s3-write.ts  send-interactions-to-sequencer.ts  separate-sign.ts  server.js  ses.mjs  smartweave.js  sns-publish.ts  (+16 more)
(+473 files in other folders)
