[package]
name = "empty-contract"
version = "0.1.0"
edition = "2021"
description = "test"
repository = "not applicable"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
warp-contracts = { version = "0.1.3" }
wasm-bindgen = "=0.2.84"
wasm-bindgen-futures = { version = "0.4.34" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
js-sys = "0.3.61"
serde_json = "1.0"
tokio-test = "0.4.2"
schemars = "0.8.10"
strum = "0.24.1"
strum_macros = "0.24.3"